@@ -56,6 +56,11 @@ shared_examples_for "all" do
         Capybara.ignore_hidden_elements = true
         @session.all("//a[@title='awesome title']").should have(1).elements
       end
+
+      it "should only find invisible nodes" do
+        Capybara.ignore_hidden_elements = true
+        @session.all("//a[@title='awesome title']", :visible => false).should have(2).elements
+      end
     end
 
     context "within a scope" do
